m fix: wrapper background was visible below bottom of images

--- a/screenshot-frames.less
+++ b/screenshot-frames.less
@@ -13,12 +13,12 @@
     // min-width: 310px;
     padding-top: 40px;
     background: #e5e5e5;
-    background: -moz-linear-gradient(top, #e5e5e5 0%, #e5e5e5 39px, #979797 39px, #979797 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(#e5e5e5 0%), color-stop(#e5e5e5 39px), color-stop(#979797 39px), color-stop(#979797 100%));
-    background: -webkit-linear-gradient(top, #e5e5e5 0%, #e5e5e5 39px, #979797 39px, #979797 100%);
-    background: -o-linear-gradient(top, #e5e5e5 0%, #e5e5e5 39px, #979797 39px, #979797 100%);
-    background: -ms-linear-gradient(top, #e5e5e5 0%, #e5e5e5 39px, #979797 39px, #979797 100%);
-    background: linear-gradient(to bottom, #e5e5e5 0%, #e5e5e5 39px, #979797 39px, #979797 100%);
+    background: -moz-linear-gradient(top, #e5e5e5 0%, #e5e5e5 39px, #979797 39px, #979797 40px, transparent 40px, transparent 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(#e5e5e5 0%), color-stop(#e5e5e5 39px), color-stop(#979797 39px), color-stop(#979797 40px), color-stop(transparent 40px), color-stop(transparent 100%));
+    background: -webkit-linear-gradient(top, #e5e5e5 0%, #e5e5e5 39px, #979797 39px, #979797 40px, transparent 40px, transparent 100%);
+    background: -o-linear-gradient(top, #e5e5e5 0%, #e5e5e5 39px, #979797 39px, #979797 40px, transparent 40px, transparent 100%);
+    background: -ms-linear-gradient(top, #e5e5e5 0%, #e5e5e5 39px, #979797 39px, #979797 40px, transparent 40px, transparent 100%);
+    background: linear-gradient(to bottom, #e5e5e5 0%, #e5e5e5 39px, #979797 39px, #979797 40px, transparent 40px, transparent 100%);
     &:before,
     &:after {
         content: '';
@@ -45,12 +45,12 @@
 .screenshot-browser-chrome {
     padding-top: 80px;
     background: rgba(245, 245, 245, 1);
-    background: -moz-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(234, 234, 234, 1) 40px, rgba(254, 254, 254, 1) 40px, rgba(234, 234, 234, 1) 79px, rgba(122, 122, 122, 1) 79px, rgba(122, 122, 122, 1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0px, rgba(245, 245, 245, 1)), color-stop(40px, rgba(234, 234, 234, 1)), color-stop(40px, rgba(254, 254, 254, 1)), color-stop(79px, rgba(234, 234, 234, 1)), color-stop(79px, rgba(122, 122, 122, 1)), color-stop(100%, rgba(122, 122, 122, 1)));
-    background: -webkit-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(234, 234, 234, 1) 40px, rgba(254, 254, 254, 1) 40px, rgba(234, 234, 234, 1) 79px, rgba(122, 122, 122, 1) 79px, rgba(122, 122, 122, 1) 100%);
-    background: -o-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(234, 234, 234, 1) 40px, rgba(254, 254, 254, 1) 40px, rgba(234, 234, 234, 1) 79px, rgba(122, 122, 122, 1) 79px, rgba(122, 122, 122, 1) 100%);
-    background: -ms-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(234, 234, 234, 1) 40px, rgba(254, 254, 254, 1) 40px, rgba(234, 234, 234, 1) 79px, rgba(122, 122, 122, 1) 79px, rgba(122, 122, 122, 1) 100%);
-    background: linear-gradient(to bottom, rgba(245, 245, 245, 1) 0%, rgba(234, 234, 234, 1) 40px, rgba(254, 254, 254, 1) 40px, rgba(234, 234, 234, 1) 79px, rgba(122, 122, 122, 1) 79px, rgba(122, 122, 122, 1) 100%);
+    background: -moz-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(234, 234, 234, 1) 40px, rgba(254, 254, 254, 1) 40px, rgba(234, 234, 234, 1) 79px, rgba(122, 122, 122, 1) 79px, rgba(122, 122, 122, 1) 80px, rgba(255, 255, 255, 0) 81px, rgba(255, 255, 255, 0) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0px, rgba(245, 245, 245, 1)), color-stop(40px, rgba(234, 234, 234, 1)), color-stop(40px, rgba(254, 254, 254, 1)), color-stop(79px, rgba(234, 234, 234, 1)), color-stop(79px, rgba(122, 122, 122, 1)), color-stop(80px, rgba(122, 122, 122, 1)), color-stop(80px, rgba(255, 255, 255, 0)), color-stop(80px, rgba(255, 255, 255, 100%)));
+    background: -webkit-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(234, 234, 234, 1) 40px, rgba(254, 254, 254, 1) 40px, rgba(234, 234, 234, 1) 79px, rgba(122, 122, 122, 1) 79px, rgba(122, 122, 122, 1) 80px, rgba(255, 255, 255, 0) 81px, rgba(255, 255, 255, 0) 100%);
+    background: -o-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(234, 234, 234, 1) 40px, rgba(254, 254, 254, 1) 40px, rgba(234, 234, 234, 1) 79px, rgba(122, 122, 122, 1) 79px, rgba(122, 122, 122, 1) 80px, rgba(255, 255, 255, 0) 81px, rgba(255, 255, 255, 0) 100%);
+    background: -ms-linear-gradient(top, rgba(245, 245, 245, 1) 0%, rgba(234, 234, 234, 1) 40px, rgba(254, 254, 254, 1) 40px, rgba(234, 234, 234, 1) 79px, rgba(122, 122, 122, 1) 79px, rgba(122, 122, 122, 1) 80px, rgba(255, 255, 255, 0) 81px, rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(to bottom, rgba(245, 245, 245, 1) 0%, rgba(234, 234, 234, 1) 40px, rgba(254, 254, 254, 1) 40px, rgba(234, 234, 234, 1) 79px, rgba(122, 122, 122, 1) 79px, rgba(122, 122, 122, 1) 80px, rgba(255, 255, 255, 0) 81px, rgba(255, 255, 255, 0) 100%);
     &:before,
     &:after {
         content: '';
